# FFmpeg_musicplayer

./: 123.c  4.cpp  CMakeLists.txt  main.c  music.cpp  stdafx.cpp  text.c
1/build-ffplay_qt-Desktop_Qt_6_8_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  test.aac
1/build-ffplay_qt-Desktop_Qt_6_8_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
1/build-ffplay_qt-Desktop_Qt_6_8_0_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: SDL.h.15DE76DE911B2BBB.idx  SDL_assert.h.8E93B84834F9F767.idx  SDL_atomic.h.0C9A55D4C2879606.idx  SDL_audio.h.F5A075DC5F570216.idx  SDL_blendmode.h.F7747BE880DDE69F.idx  SDL_clipboard.h.6E3C48F3439B6BBD.idx  SDL_config.h.F113C0BCA15DDA95.idx  SDL_cpuinfo.h.E504BE4FFB0A32BD.idx  SDL_endian.h.FE8AD4599FF1CEFF.idx  SDL_error.h.64E3DB74E96A32BE.idx  SDL_events.h.4903685A126B30B4.idx  SDL_filesystem.h.D8D42098EB2C99BF.idx  SDL_gamecontroller.h.57AD333DDAD375EB.idx  SDL_gesture.h.006032737EEFDD96.idx  SDL_haptic.h.2B4F5D06F5B7CC1F.idx  SDL_hints.h.F824AA8BA12A160E.idx  SDL_joystick.h.C33FF52F990D43B6.idx  SDL_keyboard.h.BCE4FC71811B000E.idx  SDL_keycode.h.9F78084B0153821C.idx  SDL_loadso.h.76D1F3D2FC3FF891.idx  SDL_log.h.FD8F8A87AE23357E.idx  SDL_main.h.43CB10F7FD06AB87.idx  SDL_messagebox.h.E80E812CF37BA0B7.idx  SDL_mouse.h.0B3385DC7D617F07.idx  SDL_mutex.h.82F2153E5016A13A.idx  SDL_pixels.h.78618EBBF4A48FA3.idx  SDL_platform.h.032FC1FEAF6F62DA.idx  SDL_power.h.E8CB36B74A988A48.idx  SDL_quit.h.51DA591B71972786.idx  SDL_rect.h.A0E2B53D34699C56.idx  SDL_render.h.C18AE38E52609F53.idx  SDL_rwops.h.FC3EE3FC6866CF79.idx  SDL_scancode.h.957AB7A2C1D29801.idx  SDL_shape.h.15980574D02460B4.idx  SDL_stdinc.h.A326C1D7E831A7A6.idx  SDL_surface.h.CDF86CB4F95D61ED.idx  SDL_system.h.C7D47AB78D4DB3DB.idx  SDL_thread.h.35C92D33CBFB881C.idx  SDL_timer.h.19AE4F7DA746EBF4.idx  SDL_touch.h.0773A04C2832D15C.idx  (+215 more)
ffplay_qt/: ffplay_3_22.c
ffplay_qt/build-ffplay_qt-Desktop_Qt_6_8_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
ffplay_qt/build-ffplay_qt-Desktop_Qt_6_8_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
ffplay_qt/build-ffplay_qt-Desktop_Qt_6_8_0_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: SDL.h.322034E703C636EE.idx  SDL_assert.h.8A5BD88E2CF49989.idx  SDL_atomic.h.51E0220CAEAAA4B5.idx  SDL_audio.h.96E9C35EFEB6457E.idx  SDL_blendmode.h.728FAAF2C43938AB.idx  SDL_clipboard.h.E5FB371C51C3168B.idx  SDL_config.h.ACA03E4E73471A9F.idx  SDL_cpuinfo.h.1792C858CDB1F9DF.idx  SDL_endian.h.F1DAFC3B2B577B16.idx  SDL_error.h.9B866E1541CD4940.idx  SDL_events.h.BC7E5EE0D88ABF3C.idx  SDL_filesystem.h.197F5F9805D6A1A4.idx  SDL_gesture.h.D59630A8672718D0.idx  (+178 more)
ffplay_qt/liset/: ffplay.c  ffplay_官方程序.c
musicplayer/: 123.c  4.cpp  CMakeLists.txt  README.md  main.c  stdafx.cpp  test2.c  test3.c
